--- a/carShareBackend/composer.json
+++ b/carShareBackend/composer.json
@@ -9,12 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-json": "*",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "laravelcollective/html": "~5.0",
         "nesbot/carbon": "2.16.3 as 1.34.0",
-        "tymon/jwt-auth": "^1.0.0-rc.3",
-      "ext-json": "*"
+        "ext-gd": "*",
+        "tymon/jwt-auth": "^1.0.0-rc.3"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
