--- a/carShareBackend/composer.json
+++ b/carShareBackend/composer.json
@@ -9,19 +9,21 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-gd": "*",
         "ext-json": "*",
+        "ext-zlib": "*",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "~5.0",
         "nesbot/carbon": "2.16.3 as 1.34.0",
-        "ext-gd": "*",
-        "tymon/jwt-auth": "^1.0.0-rc.3",
-        "ext-zlib": "*"
+        "paypal/rest-api-sdk-php": "*",
+        "tymon/jwt-auth": "^1.0.0-rc.3"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
+        "beyondcode/laravel-er-diagram-generator": "^1.3",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
