--- a/carShareBackend/composer.json
+++ b/carShareBackend/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-curl": "^7.2",
         "ext-gd": "*",
         "ext-json": "*",
         "ext-zlib": "*",
@@ -18,6 +19,7 @@
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "~5.0",
         "nesbot/carbon": "2.16.3 as 1.34.0",
+        "paypal/paypal-checkout-sdk": "1.0.0",
         "paypal/rest-api-sdk-php": "*",
         "tymon/jwt-auth": "^1.0.0-rc.3"
     },
